--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather Forecast</title>
   </head>
-  <body>
+  <body class="body">
     <div class="full-page">
     <div class="container">
       
@@ -33,7 +33,7 @@
       <div class="search">
         <form class="form" id="search-form">
 
-          🔎<input type="text" class="input-city" id="search-city" placeholder="    Enter a city" />
+          🔎<input type="text" class="input-city" id="search-city" placeholder="Enter a city" />
 
           <input class="input-button" type="submit" value="Search" />
 
@@ -41,7 +41,7 @@
             id="current-location"
             class="location-button"
             type="submit"
-            value="Current Location"
+            value="📍Current"
           />
         </form>
       </div>
