--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="my-city">
       <div class="row">
       <div class="col">
-        <h1 class="currentCity">🌤️</h1>
+        <img src="" alt="Clear" id="icon" class="currentCity" />
       </div>
       <div class="col">
         <h1 class="currentCity" id="cityName">Kiev</h1>
@@ -81,19 +81,19 @@
        <div class="container">
           <div class="row">
             <div class="col">
-              <h3 class="days">MONDAY</h3>
+              <h3 class="days">MON</h3>
             </div>
             <div class="col">
-              <h3 class="days">TUESDAY</h3>
+              <h3 class="days">TUE</h3>
             </div>
             <div class="col">
-              <h3 class="days">WEDNESDAY</h3>
+              <h3 class="days">WED</h3>
             </div>
             <div class="col">
-              <h3 class="days">THURSDAY</h3>
+              <h3 class="days">THU</h3>
             </div>
             <div class="col">
-              <h3 class="days">FRIDAY</h3>
+              <h3 class="days">FRI</h3>
             </div>
           </div>
 
@@ -120,17 +120,16 @@
     </div>
     </div>
 
-    <footer>
-            <div class="footer">
-                <p class="footer">
-                    ©️ Coded by
-                    <a href="https://github.com/Valeriuna/Weather-Forecast" target="_blank"
-                        class="GitHub">
-                        Valeriia Kovalenko
-                    </a>
-                </p>
-            </div>
-        </footer>
+    </div>
+      <small>
+        <p class="footer">
+        <a href="https://github.com/Valeriuna/Weather-Forecast" target="_blank"  class="GitHub">
+         Open-source code</a>
+         by Valeriia Kovalenko
+         </p>
+      </small>
+    </div>
+   
      <script src="src/java.js"></script>
   </body>
 </html>
