implemented units conversion

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <div class="col">
         <h1 class="units">
-            <a href="#" id="celcium">℃</a> |
+            <a href="#" id="celcium" class="active">℃</a> |
             <a href="#" id="fahrenheit">°F</a>
         </h1>
       </div>
